--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     <script>
         $(document).ready(function(){
           $('.sidenav').sidenav();
+          $('select').formSelect();
         })
     </script>
   </body>
